--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,16 +41,17 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\_Scripts\PlayerAttack.cs" />
+     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieFree.cs" />
+     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieCameraLogic.cs" />
+     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieCharacterControl.cs" />
+     <Compile Include="Assets\_Scripts\EnemyLogic.cs" />
      <Compile Include="Assets\_Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\_Scripts\Audio\Sound.cs" />
      <Compile Include="Assets\_Scripts\EnemySpawn.cs" />
      <Compile Include="Assets\_Scripts\CameraMovement.cs" />
      <Compile Include="Assets\_Scripts\Level.cs" />
      <Compile Include="Assets\_Scripts\Audio\AudioManager.cs" />
-     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieCharacterControl.cs" />
-     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieFree.cs" />
-     <Compile Include="Assets\Supercyan Character Pack Zombie Sample\Scripts\ZombieCameraLogic.cs" />
+     <Compile Include="Assets\_Scripts\MenuNavigation.cs" />
      <Folder Include="Assets" />
      <Folder Include="Assets\Supercyan Character Pack Zombie Sample\Scripts" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -60,10 +61,12 @@
      <Folder Include="Assets\TextMesh Pro\Resources\Sprite Assets" />
      <Folder Include="Assets\Fonts" />
      <None Include="Assets\Supercyan Character Pack Zombie Sample\Shaders\Legacy\CelShader.shader" />
+     <Folder Include="Assets\Scenes\SampleScene" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <Folder Include="Assets\Supercyan Character Pack Zombie Sample" />
      <Folder Include="Assets\Supercyan Character Pack Zombie Sample\Prefabs" />
      <Folder Include="Assets\Supercyan Character Pack Zombie Sample\Materials" />
+     <Folder Include="Assets\Images" />
      <Folder Include="Assets\_Scripts" />
      <Folder Include="Assets\TextMesh Pro\Resources\Fonts &amp; Materials" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
